@@ -58,7 +58,7 @@ main(int argc, char * argv[])
 
   assert(pthread_create(&t, NULL, func, (void *) NULL) == 0);
 
-  Sleep(1000);
+  Sleep(100);
 
   return 0;
 }
