@@ -61,7 +61,7 @@ main(int argc, char * argv[])
 	    assert(pthread_create(&id[i], NULL, func, (void *)(size_t)i) == 0);
 	  }
 
-	Sleep(1000);
+	Sleep(400);
 
 	/* Success. */
 	return 0;
